--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="role-card role-military">
           <div class="role-header"><div class="role-name">MILITARY</div><div class="role-uses">3 USES</div></div>
           <div class="role-body">
-            <div class="ability"><div class="ability-name">DEPLOY TRAP</div><div class="ability-desc">Place hidden token. Alien entering is STUNNED 1 turn.</div></div>
+            <div class="ability"><div class="ability-name">DEPLOY TRAP</div><div class="ability-desc">Place hidden trap. Alien entering is STUNNED 1 turn.</div></div>
             <div class="ability"><div class="ability-name">TACTICAL RALLY</div><div class="ability-desc">Grant adjacent ally +1 Action immediately.</div></div>
           </div>
         </div>
